Fixed missing borders on mice category pages

--- a/src/modules/better-mice/styles.css
+++ b/src/modules/better-mice/styles.css
@@ -371,10 +371,6 @@ ul.minluck-list {
   border: none;
 }
 
-.mouseListView-categoryContent-subgroup-mouse-margin {
-  box-shadow: none;
-}
-
 .mouseListView-categoryContent-subgroup-name {
   font-size: 12px;
   border-radius: 5px;
